[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-wifi"
version = "0.1.0"
description = "NASA-themed WiFi terminal UI for NetworkManager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Amiel" }
]
keywords = ["wifi", "tui", "networkmanager", "nmcli", "terminal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Networking",
  "Topic :: Terminals"
]

[project.urls]
Homepage = "https://github.com/juswa005/orbital-wifi"
Repository = "https://github.com/juswa005/orbital-wifi"
Issues = "https://github.com/juswa005/orbital-wifi/issues"

[project.scripts]
orbital-wifi = "orbital_wifi.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
